--- a/static/css/index.css
+++ b/static/css/index.css
@@ -15,6 +15,9 @@
         padding: 8px 15px;
         font-size: 14px;
     }
+    .team-members-container {
+        min-width: 350px;
+    }
 }
 
 
@@ -528,5 +531,8 @@ h4 {
     .advantage-card img {
         width: 16px;
         height: 16px;
+    }
+    .team-members-container {
+        min-width: 250px;
     }
 }
