--- a/static/css/index.css
+++ b/static/css/index.css
@@ -15,6 +15,9 @@
         padding: 8px 15px;
         font-size: 14px;
     }
+    .team-members-container {
+        min-width: 650px;
+    }
 }
 
 
