--- a/static/css/index.css
+++ b/static/css/index.css
@@ -530,3 +530,12 @@ h4 {
         height: 16px;
     }
 }
+
+
+
+
+@media (min-width: 768px) {
+            .team-members-container {
+                grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)) !important;
+            }
+        }
